# bootloader

./: Cargo.toml  README.md  boot.img  flake.nix  shell.nix
.cargo/: config.toml
esp/: shellx64.EFI
esp/EFI/: h3w4lxpqlgsimj93ajlzakqdxa5khap3-linux-6.12.32-bzImage.EFI
esp/EFI/BOOT/: BOOTX64.EFI
esp/loader/: loader.conf  random-seed
esp/loader/entries/: 163b44d200684e49ada2859de61dbaad-6.13.7-arch1-1-fallback.conf  163b44d200684e49ada2859de61dbaad-6.13.7-arch1-1.conf  nixos-generation-111.conf  nixos-generation-112.conf  nixos-generation-113.conf
extra/: efirunner.sh
src/: boot_selector.rs  entries_parse.rs  kernel_loader.rs  loader.rs  loader_entries.rs  main.rs
src/entries_parse/: fs_handler.rs
src/kernel_loader/: memory.rs
